Started random CustomItem dropping